fixed links in scrolly on mobile

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -3704,10 +3704,11 @@ figure figure[class="image"] {
   .page-node-type-article .scrolly-gallery-wrapper .eyebrow-title::after {
     background-color: #fff; }
   .page-node-type-article .scrolly-gallery-wrapper a:not([class*="button"]) {
-    color: #fff;
-    border-bottom: 2px solid; }
+    border-bottom: 2px solid #052049;
+    color: #052049; }
     @media (min-width: 1050px) {
       .page-node-type-article .scrolly-gallery-wrapper a:not([class*="button"]) {
+        color: #fff;
         border-bottom: 2px solid #fff; } }
     @media (min-width: 1050px) {
       .page-node-type-article .scrolly-gallery-wrapper a:not([class*="button"]):hover {
