--- a/docroot/themes/custom/ucsf/scss/components/_parallax-image-with-text-overlay.scss
+++ b/docroot/themes/custom/ucsf/scss/components/_parallax-image-with-text-overlay.scss
@@ -69,10 +69,11 @@ $parallax-options: (
 
   // Reset links and buttons.
   a:not([class *="button"]) {
-    color: $white;
-    border-bottom: 2px solid;
+    border-bottom: 2px solid $a1-navy;
+    color: $a1-navy;
 
     @include breakpoint($new-large) {
+      color: $white;
       border-bottom: 2px solid $white;
     }
 
